<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:background="#90caf9">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question10"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_q10_answer1"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/radius"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:text="@string/question10_answer1"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_q10_answer2"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question10_answer2"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_q10_answer3"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question10_answer3"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_q10_answer4"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:background="@drawable/radius"

        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question10_answer4"
        android:textSize="15dp"
        android:textColor="@color/black"/>

</LinearLayout>