<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="#90caf9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="25dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:gravity="center"
            android:text="@string/question6"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_q6_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question6_answer1"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_q6_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question6_answer2"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_q6_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question6_answer3"
        android:textSize="15dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_q6_answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:background="@drawable/radius"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:text="@string/question6_answer4"
        android:textSize="15dp"
        android:textColor="@color/black" />

</LinearLayout>